objects/ActivityRecordChartSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ARChartPageSize__c</fullName>
        <label>ARChartPageSize</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Type_Name_Length__c</fullName>
        <label>Activity Type Name Length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateRangeForFirstFilter__c</fullName>
        <label>DateRangeForFirstFilter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateRangeForSecondFilter__c</fullName>
        <label>DateRangeForSecondFilter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ActivityRecordChartSetting</label>
</CustomObject>